--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pdf-parse-fork": "^1.2.0",
+    "puppeteer": "^24.2.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
